@@ -13,7 +13,7 @@ def test_api_requests_cache_no_parameters():
     t0 = time.perf_counter()
     api.get("status_show")
     t1 = time.perf_counter()
-    for ii in range(50):
+    for ii in range(20):
         api.get("status_show")
     t2 = time.perf_counter()
     assert (t1 - t0) > (t2 - t1)
@@ -25,7 +25,7 @@ def test_api_requests_cache_with_parameters():
     t0 = time.perf_counter()
     api.get("organization_list_for_user", permission="create_dataset")
     t1 = time.perf_counter()
-    for ii in range(50):
+    for ii in range(20):
         api.get("organization_list_for_user", permission="create_dataset")
     t2 = time.perf_counter()
     assert (t1 - t0) > (t2 - t1)
