@@ -1,4 +1,5 @@
 0.16.12
+ - tests: allow to use different DCOR instance for testing
  - tests: make tests independent of testing user
 0.16.11
  - fix: support CKAN 2.11 (authorization and status_show)
